# Mnemos-Memory-Kernel

./: README.md  main.py  pyproject.toml  requirements.txt  workspace.json
Mnemos/: README.md
Mnemos/data/: index.json
Mnemos/data/memories/: 06bbcb76-0100-456d-916c-a141c515912e.json  45e9b65b-d71b-4d4e-8ed6-b6042b4ed49e.json  83e36f54-997e-453e-a2a5-7fb08e873c34.json  9b2b74e7-90d4-4dd8-bd09-4d122f288d4c.json  e1341cc9-d817-4581-bb82-0742e3a4cc3a.json  e1d6ab0b-23c9-4d7c-897f-a3f1ae646006.json
Mnemos/src/: __init__.py  config.py
Mnemos/src/api/: api.py
Mnemos/src/classifier/: __init__.py
Mnemos/src/evolution/: comparator.py  summarizer.py
Mnemos/src/kernel/: kernel.py  memory_node.py
Mnemos/src/mnemos/: __init__.py
Mnemos/src/recall/: __init__.py  importance_scorer.py  query_parser.py
Mnemos/tests/: test_constraints.py  test_evolution.py  test_memory.py  test_recall.py  test_research_workflow.py
VoiceInk/VoiceInk/PowerMode/: ActiveWindowService.swift  PowerModeView.swift  PowerModeViewComponents.swift
VoiceInk/VoiceInk/Services/: AudioFileTranscriptionManager.swift  AudioFileTranscriptionService.swift  DictionaryMigrationService.swift  ModelPrewarmService.swift  ParakeetTranscriptionService.swift  (+1 more)
data/: index.json
data/memories/: 51da7405-7b1b-4ee4-bd30-e0ddc94deb29.json  7f9ebb44-ecc9-46e7-94b8-1159b8231af2.json  baaa597b-b603-46eb-a152-c68d71b13f64.json  cc9efde5-efa6-422d-958a-cdd74d9f217a.json  f03b83fd-d584-4ee1-8b3e-3315eae2c8cd.json
src/mnemos/: __init__.py  config.py
src/mnemos/api/: api.py
tests/: __init__.py  test_evolution.py
(+26 files in other folders)
